--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
   "dependencies": {
     "@prisma/client": "^5.22.0",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.41.1",
     "framer-motion": "^11.0.0",
     "next": "14.2.5",
     "next-auth": "^4.24.8",
     "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "cloudinary": "^1.41.1"
+    "react-dom": "18.3.1"
   },
   "devDependencies": {
+    "@types/node": "^20.0.0",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.41",
     "prisma": "^5.22.0",
